--- a/test.html
+++ b/test.html
@@ -1,2 +1,2 @@
 <h1>My First Website</h1>
-<p>My Favorite Color is Purple</p>
+<p>My Favorite Color is <span style="color:purple;">Purple</span></p>
